--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,105 @@
 @charset "UTF-8";
 /*header*/
-.portfolio__header__nav {
-  width: 100%;
-  margin: 0 auto; }
-  .portfolio__header__nav__list {
-    display: flex;
-    justify-content: center;
+.portfolio__header {
+  font-size: 20px;
+  width: 90%; }
+  .portfolio__header__nav {
     width: 100%;
-    list-style: none;
-    padding: 0; }
-    .portfolio__header__nav__list__item {
-      width: 25%; }
-      .portfolio__header__nav__list__item__link {
-        display: flex;
-        justify-content: center;
-        text-decoration: none;
-        font-size: 20px;
-        color: #000000; }
+    margin: 15px auto; }
+    .portfolio__header__nav__list {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      list-style: none;
+      padding: 0; }
+      .portfolio__header__nav__list__item {
+        width: 25%; }
+        .portfolio__header__nav__list__item__link {
+          font-family: 'Noto Sans JP';
+          display: flex;
+          justify-content: center;
+          text-decoration: none;
+          font-size: 1em;
+          color: #000000; }
+          @media screen and (max-width: 640px) {
+            .portfolio__header__nav__list__item__link {
+              font-size: 0.9em; } }
 
 /*main*/
+.portfolio__main {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  font-size: 20px; }
+  .portfolio__main #ABOUT,
+  .portfolio__main #PHOTOS,
+  .portfolio__main #SNS {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding-top: 20px;
+    margin-bottom: 20px; }
+  .portfolio__main__about__content, .portfolio__main__photos__content, .portfolio__main__sns__content {
+    padding: 0 10%;
+    margin: 0 10%;
+    width: 80%;
+    border-left: 1px solid #323333;
+    border-right: 1px solid #323333; }
+  .portfolio__main .section__title {
+    max-width: 220px;
+    width: 50%;
+    height: auto; }
+    .portfolio__main .section__title__img {
+      width: 100%;
+      height: auto; }
+
+.portfolio__main__top {
+  height: 500px;
+  width: 100%;
+  background-image: url("../image/bg-top.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center; }
+  @media screen and (max-width: 960px) {
+    .portfolio__main__top {
+      height: 100vh; } }
+  .portfolio__main__top__title {
+    width: 70%;
+    height: 100%;
+    display: flex;
+    justify-content: center; }
+    .portfolio__main__top__title__icon {
+      display: table-cell;
+      margin: auto 0;
+      width: 100%;
+      max-width: 450px;
+      height: auto; }
+
+.portfolio__main__about__content {
+  color: #323333; }
+  .portfolio__main__about__content__sentence {
+    text-align: justify;
+    text-justify: inter-ideograph;
+    font-size: 1em;
+    line-height: 1.2em; }
+    @media screen and (max-width: 480px) {
+      .portfolio__main__about__content__sentence {
+        font-size: 0.8em; } }
+  .portfolio__main__about__content__list {
+    padding: 5px 0; }
+    .portfolio__main__about__content__list__item {
+      font-size: 20px; }
+
 /*all*/
 .portfolio {
-  font-family: 'Noto Sans JP', 游ゴシック体, 'Yu Gothic', YuGothic, 'ヒラギノ角ゴシック Pro', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, Osaka, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
-  width: 90%;
-  margin: 0 auto;
-  padding: 1px; }
+  font-family: 游ゴシック体, 'Yu Gothic', YuGothic, 'ヒラギノ角ゴシック Pro', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, Osaka, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
+  color: #323333;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; }
 
 /*# sourceMappingURL=style.css.map */
