--- a/scss/header.scss
+++ b/scss/header.scss
@@ -2,10 +2,17 @@
 
 $font-size: 20px;
 $breakpoint: 640px;
+$breakpoint-tb: 960px;
+$breakpoint-sp: 480px;
 
 .portfolio__header {
   font-size: $font-size;
   width: 90%;
+  padding: 5px 0;
+  display: none;
+  @include max-screen($breakpoint-sp) {
+    display: none;
+  }
 
   &__nav {
     width: 100%;
@@ -26,7 +33,7 @@ $breakpoint: 640px;
           display: flex;
           justify-content: center;
           text-decoration: none;
-          font-size: 1em;
+          font-size: 1.5em;
           @include max-screen($breakpoint) {
             font-size: 0.9em;
           }
