--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,32 +7,34 @@ $breakpoint-sp: 480px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  font-size: 20px;
+  font-size: 23px;
 
   #ABOUT,
   #PHOTOS,
   #SNS {
-    width: 90%;
+    width: 85%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    padding-top: 20px;
-    margin-bottom: 20px;
+    padding-top: 35px;
+    margin-bottom: 30px;
+    @include max-screen($breakpoint-tb) {
+      width: 80%;
+    }
   }
 
   &__about__content,
   &__photos__content,
   &__sns__content {
-    padding: 0 10%;
-    margin: 0 10%;
+    padding: 20px 10%;
     width: 80%;
     border-left: 1px solid #323333;
     border-right: 1px solid #323333;
   }
 
   .section__title {
-    max-width: 220px;
-    width: 50%;
+    max-width: 280px;
+    width: 70%;
     height: auto;
 
     &__img {
@@ -44,7 +46,7 @@ $breakpoint-sp: 480px;
 }
 
 .portfolio__main__top {
-  height: 500px;
+  height: 100vh;
   @include max-screen($breakpoint-tb) {
     height: 100vh;
   }
@@ -66,7 +68,7 @@ $breakpoint-sp: 480px;
       display: table-cell;
       margin: auto 0;
       width: 100%;
-      max-width: 450px;
+      max-width: 70vh;
       height: auto;
     }
 
@@ -82,18 +84,28 @@ $breakpoint-sp: 480px;
     &__sentence {
       text-align: justify;
       text-justify: inter-ideograph;
-      font-size: 1em;
+      font-size: 0.9em;
       @include max-screen($breakpoint-sp) {
-        font-size: 0.8em;
+        font-size: 0.7em;
       }
-      line-height: 1.2em;
+      line-height: 1.4em;
+
+      span {
+        display: inline-block;
+        width: 100%;
+        text-align: center;
+      }
     }
 
     &__list {
       padding: 5px 0;
 
       &__item {
-        font-size: 20px;
+        font-size: 1.0em;
+        @include max-screen($breakpoint-sp) {
+          font-size: 0.8em;
+        }
+        line-height: 1.2em;
       }
     }
   }
@@ -103,9 +115,122 @@ $breakpoint-sp: 480px;
 
 .portfolio__main__photos {
 
+  &__content {
+
+    &__list {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      width: 100%;
+
+      &__item {
+        position: relative;
+        width: 49.5%;
+        margin-bottom: 8px;
+
+        @include max-screen($breakpoint-tb) {
+          width: 100%;
+        }
+
+        &__img {
+          width: 100%;
+          height: auto;
+
+        }
+
+        &:hover &__img {
+          -webkit-filter: blur(3px);
+          filter: blur(3px);
+          -webkit-transition: .3s ease-in-out;
+          transition: .3s ease-in-out;
+
+        }
+
+        &__mask {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: absolute;
+          background-image: url("../image/bg-photo.png");
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: contain;
+          opacity: 0;
+          width: 90%;
+          height: 90%;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+
+          &__sentence {
+            font-size: 2em;
+            @include max-screen($breakpoint-sp) {
+              font-size: 1.2em;
+            }
+            color: #323333;
+          }
+        }
+
+        &:hover &__mask {
+          opacity: 1;
+          -webkit-transition: .5s ease-in-out;
+          transition: .5s ease-in-out;
+        }
+      }
+    }
+  }
 }
 
 .portfolio__main__sns {
 
+  &__content {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 
+    &__list {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+
+      &__item {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        height: auto;
+        width: 33%;
+        @include max-screen($breakpoint-tb) {
+          width: 100%;
+          margin-bottom: 25px;
+        }
+
+        &__link {
+          display: flex;
+
+          justify-content: center;
+          flex-wrap: wrap;
+          color: #323333;
+          text-decoration: none;
+
+        &__icon {
+          width: 80px;
+          height: 80px;
+        }
+
+        &__title {
+          width: 90%;
+          margin-top: 10px;
+          vertical-align: middle;
+          text-align: center;
+          line-height: 120%;
+          font-size: 20px;
+          @include max-screen($breakpoint-sp) {
+            font-size: 15px;
+          }
+        }
+        }
+      }
+    }
+  }
 }
